--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -6,6 +6,7 @@
     "bootstrap": "^4.3.1",
     "bulma": "^0.7.5",
     "jquery": "3.4.1",
+    "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-router-bootstrap": "^0.25.0",
