--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -7,10 +7,13 @@
     "@fullcalendar/daygrid": "^4.3.0",
     "@fullcalendar/react": "^4.3.0",
     "auth0-js": "^9.11.3",
+    "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "bulma": "^0.7.5",
     "jquery": "3.4.1",
+    "moment": "^2.24.0",
     "react": "^16.9.0",
+    "react-big-calendar": "^0.22.1",
     "react-dom": "^16.9.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
@@ -29,8 +32,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.3",
     "node-sass": "^4.12.0",
-    "sass-loader": "^8.0.0",
-    "webpack": "^4.41.1"
+    "sass-loader": "^8.0.0"
   },
   "eslintConfig": {
     "extends": "react-app"
